<resources>
    <string name="app_name">FarmConnect</string>

    <string name="content_description">image</string>
    <string name="title_login">LOGIN</string>
    <string name="et_hint_email">Email ID</string>
    <string name="et_hint_password">Password</string>
    <string name="lbl_forgot_password">Forgot Password?</string>
    <string name="login_button_label">Login</string>
    <string name="account_absent">Don\'t have an account?</string>
    <string name="register"><u>Register</u></string>

    <string name="create_an_account">CREATE AN ACCOUNT</string>
    <string name="hint_last_name">Last name</string>
    <string name="hint_first_name">First name</string>
    <string name="et_hint_confirm_password">Confirm Password</string>
    <string name="agreement_tandc">I Agree To The <u> Terms &amp; Conditions </u></string>
    <string name="register_button_label">Register</string>
    <string name="account_preexists">Already have an account?</string>
    <string name="login"><u>Login</u></string>

    <string name="err_msg_enter_first_name">Please enter your first name.</string>
    <string name="err_msg_enter_last_name">Please enter your last name.</string>
    <string name="err_msg_enter_email">Please enter your email address.</string>
    <string name="err_msg_enter_password">Please enter the password.</string>
    <string name="err_msg_enter_confirm_password">Please confirm your password.</string>
    <string name="err_msg_password_and_confirm_password_mismatch">Password and confirm password do not match.</string>
    <string name="err_msg_agree_terms_and_condition">Agreeing to the terms and conditions is required for user registration.</string>
    <string name="registration_details_are_valid">"You have been registered successfully!"</string>

    <string name="please_wait">Please Wait&#8987;</string>

    <string name="title_forgot_password">Forgot Password?</string>
    <string name="forgot_password_title_description">Enter your registered email address in order to receive a link to reset your password.</string>
    <string name="btn_lbl_submit">Submit</string>

    <string name="email_sent_success">\"Email sent successfully to reset your password! \"</string>

    <string name="register_success">You have been registered successfully.</string>

    <string name="title_complete_profile">Please complete your profile</string>
    <string name="et_hint_mobile_number">Mobile Number</string>
    <string name="rb_lbl_male">MALE</string>
    <string name="rb_lbl_female">FEMALE</string>
    <string name="btn_lbl_save">Save</string>

    <string name="read_storage_permission_denied">You just denied the storage access permission. You can also allow it from settings.</string>

    <string name="image_selection_failed">Image selection Failed!</string>

    <string name="err_msg_enter_mobile_number">Mobile number is mandatory!.</string>

    <string name="msg_profile_update_success">Your profile is updated successfully.</string>

    <!--    <string name="title_activity_dashboard">DashboardActivity</string>-->
    <string name="title_dashboard">Dashboard</string>
    <string name="title_products">Products</string>
    <string name="title_orders">Orders</string>

    <string name="click_back_again">Please click back again to exit.</string>

    <string name="action_settings">Settings</string>
    <string name="action_add_product">Add product</string>

    <string name="title_settings">Settings</string>
    <string name="lbl_edit">Edit</string>
    <string name="lbl_addresses">Addresses</string>
    <string name="btn_lbl_logout">Logout</string>

    <string name="title_edit_profile">EDIT PROFILE</string>

    <string name="title_add_product">ADD PRODUCT</string>
    <string name="et_hint_product_title">Product Title</string>
    <string name="et_hint_product_price">Product Price ($)</string>
    <string name="et_hint_product_description">Product Description</string>
    <string name="et_hint_product_quantity">Product Quantity</string>

    <string name="err_msg_select_product_image">Please select product image.</string>
    <string name="err_msg_enter_product_title">Please enter your product title.</string>
    <string name="err_msg_enter_product_price">Please enter product price.</string>
    <string name="err_msg_enter_product_description">Please enter product description.</string>
    <string name="err_msg_enter_product_quantity">Please enter product quantity.</string>

    <string name="product_uploaded_success_message">Your product has been uploaded successfully.</string>
    <string name="no_products_added_yet">No products added yet!</string>
    <string name="no_dashboard_item_found">No items found!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="product_delete_success_message">Your product is deleted successfully.</string>
    <string name="delete_dialog_title">Delete</string>
    <string name="delete_dialog_message">Are you sure you want to delete the product?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="title_product_details">PRODUCT DETAILS</string>
    <string name="lbl_product_description">Product Description</string>
    <string name="lbl_product_details_stock_quantity">Stock Quantity</string>

</resources>