<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:fillViewport="true"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    tools:context=".ui.activities.SettingsActivity">

    <FrameLayout
        android:id="@+id/fl_header_bg"
        android:layout_width="0dp"
        android:layout_height="@dimen/header_image_height"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <ImageView
            android:id="@+id/iv_header_bg"
            android:layout_width="match_parent"
            android:layout_height="@dimen/header_image_height"
            android:contentDescription="@string/content_description"
            android:scaleType="fitXY"
            android:src="@drawable/auth_screen_background"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_settings_activity"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize">

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:paddingStart="@dimen/tv_title_left_padding"
                android:paddingEnd="0dp"
                android:text="@string/title_settings"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/tv_title_text_size"
                android:textStyle="bold" />

        </androidx.appcompat.widget.Toolbar>
    </FrameLayout>

    <FrameLayout
        android:id="@+id/fl_user_image"
        android:layout_width="@dimen/settings_user_image_size"
        android:layout_height="@dimen/settings_user_image_size"
        android:layout_marginTop="@dimen/settings_user_image_marginTop"
        app:layout_constraintTop_toBottomOf="@id/fl_header_bg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/iv_user_photo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/settings_user_picture_margin"
            android:contentDescription="@string/content_description"
            android:scaleType="fitXY"
            android:src="@drawable/ic_user_placeholder" />

<!--        <View-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="match_parent"-->
<!--            android:background="@drawable/user_image_background" />-->
    </FrameLayout>

    <ms.cs.farmconnect.utils.FCTextView
        android:id="@+id/tv_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/item_grey_border_background"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        android:paddingStart="@dimen/settings_edit_label_marginStartEnd"
        android:paddingTop="@dimen/settings_edit_label_marginTopBottom"
        android:paddingEnd="@dimen/settings_edit_label_marginStartEnd"
        android:paddingBottom="@dimen/settings_edit_label_marginTopBottom"
        android:text="@string/lbl_edit"
        android:textColor="@color/colorSecondaryText"
        android:textSize="@dimen/settings_edit_label_textSize"
        app:layout_constraintTop_toBottomOf="@id/fl_header_bg"
        app:layout_constraintEnd_toEndOf="parent" />

    <ms.cs.farmconnect.utils.FCTextViewBold
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/settings_name_marginTop"
        android:textColor="@color/colorDarkGrey"
        android:textSize="@dimen/settings_name_textSize"
        app:layout_constraintTop_toBottomOf="@id/fl_user_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="User name" />

    <ms.cs.farmconnect.utils.FCTextView
        android:id="@+id/tv_gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/settings_info_marginTop"
        android:textColor="@color/colorSecondaryText"
        android:textSize="@dimen/settings_info_textSize"
        app:layout_constraintTop_toBottomOf="@id/tv_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="Male" />

    <ms.cs.farmconnect.utils.FCTextView
        android:id="@+id/tv_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_gender"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/settings_info_marginTop"
        android:textColor="@color/colorSecondaryText"
        android:textSize="@dimen/settings_info_textSize"
        app:layout_constraintTop_toBottomOf="@id/tv_gender"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="user_name@gmail.com" />

    <ms.cs.farmconnect.utils.FCTextView
        android:id="@+id/tv_mobile_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_email"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/settings_info_marginTop"
        android:textColor="@color/colorSecondaryText"
        android:textSize="@dimen/settings_info_textSize"
        app:layout_constraintTop_toBottomOf="@id/tv_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="123456789" />

    <LinearLayout
        android:id="@+id/ll_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_mobile_number"
        android:layout_margin="@dimen/settings_address_margin"
        app:layout_constraintTop_toBottomOf="@id/tv_mobile_number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/item_grey_border_background"
        android:foreground="?attr/selectableItemBackground"
        android:orientation="horizontal"
        android:padding="@dimen/settings_address_padding">

        <ms.cs.farmconnect.utils.FCTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/settings_lbl_addresses_margin"
            android:layout_weight="1"
            android:text="@string/lbl_addresses"
            android:textColor="@color/colorSecondaryText"
            android:textSize="@dimen/settings_lbl_addresses_textSize" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/content_description"
            android:src="@drawable/ic_vector_chevron_right" />

    </LinearLayout>

    <ms.cs.farmconnect.utils.FCButton
        android:id="@+id/btn_logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll_address"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/settings_button_marginStartEnd"
        android:layout_marginTop="@dimen/settings_button_marginTopBottom"
        android:layout_marginEnd="@dimen/settings_button_marginStartEnd"
        android:layout_marginBottom="@dimen/settings_button_marginTopBottom"
        app:layout_constraintTop_toBottomOf="@id/ll_address"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/button_background"
        android:foreground="?attr/selectableItemBackground"
        android:gravity="center"
        android:paddingTop="@dimen/btn_padding"
        android:paddingBottom="@dimen/btn_padding"
        android:text="@string/btn_lbl_logout"
        android:textColor="@android:color/white"
        android:textSize="@dimen/btn_textSize" />

</androidx.constraintlayout.widget.ConstraintLayout>